--- a/style.css
+++ b/style.css
@@ -1,3 +1,83 @@
+/*#########################################################
+
+共通ファイル読み込み
+
+#########################################################*/
+/* http://meyerweb.com/eric/tools/css/reset/
+v2.0 | 20110126
+License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+	border: 0;
+	box-sizing: border-box;
+	font: inherit;
+	font-size: 100%;
+	margin: 0;
+	padding: 0;
+	vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers
+*/
+article, aside, main, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+	content: "";
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+img {
+	max-width: 100%;
+	vertical-align: bottom;
+}
+
+
+
+body {
+	height: 100vh;
+	position: relative;
+	width: 100%;
+}
+
+.btn_wrap {
+	left: 50%;
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+.btn {
+	background: #ebf5fc;
+	box-shadow: -2px -2px 5px rgba(255, 255, 255, 1),
+	3px 3px 5px rgba(0, 0, 0, .1);
+	color: #6a9bd8;
+	display: block;
+	font-size: 20px;
+	font-weight: bold;
+	line-height: 50px;
+	text-align: center;
+	text-decoration: none;
+	width: 200px;
+}
+
 .canvas_wrap {
 	background: url(./img/back.png);
 	background-size: contain;
